Files/Docs/Мультиметры управление etc/ADL-GPIB/Samples/VB.NET/Find Listener/Adgpib.vb


    Declare Function ibask32 Lib "Gpib-32.dll" Alias "ibask" (ByVal ud As Integer, ByVal opt As Integer, ByRef value As Integer) As Integer
    Declare Function ibbna32 Lib "Gpib-32.dll" Alias "ibbnaA" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer
    Declare Function ibcac32 Lib "Gpib-32.dll" Alias "ibcac" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibclr32 Lib "Gpib-32.dll" Alias "ibclr" (ByVal ud As Integer) As Integer
    Declare Function ibcmd32 Lib "Gpib-32.dll" Alias "ibcmd" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibcmda32 Lib "Gpib-32.dll" Alias "ibcmda" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibconfig32 Lib "Gpib-32.dll" Alias "ibconfig" (ByVal ud As Integer, ByVal opt As Integer, ByVal v As Integer) As Integer
    Declare Function ibdev32 Lib "Gpib-32.dll" Alias "ibdev" (ByVal bdid As Integer, ByVal pad As Integer, ByVal sad As Integer, ByVal tmo As Integer, ByVal eot As Integer, ByVal eos As Integer) As Integer
    Declare Function ibdma32 Lib "Gpib-32.dll" Alias "ibdma" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibeos32 Lib "Gpib-32.dll" Alias "ibeos" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibeot32 Lib "Gpib-32.dll" Alias "ibeot" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibfind32 Lib "Gpib-32.dll" Alias "ibfindA" (<MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer
    Declare Function ibgts32 Lib "Gpib-32.dll" Alias "ibgts" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibist32 Lib "Gpib-32.dll" Alias "ibist" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function iblines32 Lib "Gpib-32.dll" Alias "iblines" (ByVal ud As Integer, ByRef v As Integer) As Integer
    Declare Function ibln32 Lib "Gpib-32.dll" Alias "ibln" (ByVal ud As Integer, ByVal pad As Integer, ByVal sad As Integer, ByRef ln As Integer) As Integer
    Declare Function ibloc32 Lib "Gpib-32.dll" Alias "ibloc" (ByVal ud As Integer) As Integer
    Declare Function ibonl32 Lib "Gpib-32.dll" Alias "ibonl" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibpad32 Lib "Gpib-32.dll" Alias "ibpad" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibpct32 Lib "Gpib-32.dll" Alias "ibpct" (ByVal ud As Integer) As Integer
    Declare Function ibppc32 Lib "Gpib-32.dll" Alias "ibppc" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibrd32 Lib "Gpib-32.dll" Alias "ibrd" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibrda32 Lib "Gpib-32.dll" Alias "ibrda" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibrdf32 Lib "Gpib-32.dll" Alias "ibrdfA" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer
    Declare Function ibrpp32 Lib "Gpib-32.dll" Alias "ibrpp" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer
    Declare Function ibrsc32 Lib "Gpib-32.dll" Alias "ibrsc" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibrsp32 Lib "Gpib-32.dll" Alias "ibrsp" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer
    Declare Function ibrsv32 Lib "Gpib-32.dll" Alias "ibrsv" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibsad32 Lib "Gpib-32.dll" Alias "ibsad" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibsic32 Lib "Gpib-32.dll" Alias "ibsic" (ByVal ud As Integer) As Integer
    Declare Function ibsre32 Lib "Gpib-32.dll" Alias "ibsre" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibstop32 Lib "Gpib-32.dll" Alias "ibstop" (ByVal ud As Integer) As Integer
    Declare Function ibtmo32 Lib "Gpib-32.dll" Alias "ibtmo" (ByVal ud As Integer, ByVal v As Integer) As Integer
    Declare Function ibtrg32 Lib "Gpib-32.dll" Alias "ibtrg" (ByVal ud As Integer) As Integer
    Declare Function ibwait32 Lib "Gpib-32.dll" Alias "ibwait" (ByVal ud As Integer, ByVal mask As Integer) As Integer
    Declare Function ibwrt32 Lib "Gpib-32.dll" Alias "ibwrt" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibwrta32 Lib "Gpib-32.dll" Alias "ibwrta" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer) As Integer
    Declare Function ibwrtf32 Lib "Gpib-32.dll" Alias "ibwrtfA" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String) As Integer

    Declare Function gpib_get_globals32 Lib "Gpib-32.dll" Alias "gpib_get_globals" (ByRef ibsta As Integer, ByRef iberr As Integer, ByRef ibcnt As Integer, ByRef ibcntl As Long) As Long

    Declare Sub AllSpoll32 Lib "Gpib-32.dll" Alias "AllSpoll" (ByVal ud As Integer, ByRef arg1 As Long, ByRef arg2 As Long)
    Declare Sub DevClear32 Lib "Gpib-32.dll" Alias "DevClear" (ByVal ud As Integer, ByVal v As Integer)
    Declare Sub DevClearList32 Lib "Gpib-32.dll" Alias "DevClearList" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub EnableLocal32 Lib "Gpib-32.dll" Alias "EnableLocal" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub EnableRemote32 Lib "Gpib-32.dll" Alias "EnableRemote" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub FindLstn32 Lib "Gpib-32.dll" Alias "FindLstn" (ByVal ud As Integer, ByRef arg1 As Short, ByRef arg2 As Short, ByVal limit As Integer)
    Declare Sub FindRQS32 Lib "Gpib-32.dll" Alias "FindRQS" (ByVal boardID As Long, ByVal arg1 As Long, ByVal result As Long)
    Declare Sub PassControl32 Lib "Gpib-32.dll" Alias "PassControl" (ByVal ud As Integer, ByVal addr As Integer)
    Declare Sub PPoll32 Lib "Gpib-32.dll" Alias "PPoll" (ByVal ud As Integer, ByRef result As Integer)
    Declare Sub PPollConfig32 Lib "Gpib-32.dll" Alias "PPollConfig" (ByVal ud As Integer, ByVal addr As Integer, ByVal line As Integer, ByVal sense As Integer)
    Declare Sub PPollUnconfig32 Lib "Gpib-32.dll" Alias "PPollUnconfig" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub RcvRespMsg32 Lib "Gpib-32.dll" Alias "RcvRespMsg" (ByVal ud As Integer, ByRef arg1 As Long, ByVal cnt As Integer, ByVal term As Integer)
    Declare Sub ReadStatusByte32 Lib "Gpib-32.dll" Alias "ReadStatusByte" (ByVal ud As Integer, ByVal addr As Integer, ByRef result As Integer)
    Declare Sub Receive32 Lib "Gpib-32.dll" Alias "Receive" (ByVal ud As Integer, ByVal addr As Integer, ByRef arg1 As Long, ByVal cnt As Integer, ByVal term As Integer)
    Declare Sub ReceiveSetup32 Lib "Gpib-32.dll" Alias "ReceiveSetup" (ByVal ud As Integer, ByVal addr As Integer)
    Declare Sub ResetSys32 Lib "Gpib-32.dll" Alias "ResetSys" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub Send32 Lib "Gpib-32.dll" Alias "Send" (ByVal ud As Integer, ByVal addr As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer, ByVal term As Integer)
    Declare Sub SendCmds32 Lib "Gpib-32.dll" Alias "SendCmds" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer)
    Declare Sub SendDataBytes32 Lib "Gpib-32.dll" Alias "SendDataBytes" (ByVal ud As Integer, <MarshalAsAttribute(UnmanagedType.VBByRefStr)> ByRef sstr As String, ByVal cnt As Integer, ByVal term As Integer)
    Declare Sub SendIFC32 Lib "Gpib-32.dll" Alias "SendIFC" (ByVal ud As Integer)
    Declare Sub SendList32 Lib "Gpib-32.dll" Alias "SendList" (ByVal ud As Integer, ByRef arg1 As Long, ByRef arg2 As Long, ByVal cnt As Integer, ByVal term As Integer)
    Declare Sub SendLLO32 Lib "Gpib-32.dll" Alias "SendLLO" (ByVal ud As Integer)
    Declare Sub SendSetup32 Lib "Gpib-32.dll" Alias "SendSetup" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub SetRWLS32 Lib "Gpib-32.dll" Alias "SetRWLS" (ByVal ud As Integer, ByRef arg1 As Long)
    Declare Sub TestSys32 Lib "Gpib-32.dll" Alias "TestSys" (ByVal ud As Integer, ByRef arg1 As Long, ByRef arg2 As Long)
    Declare Sub Trigger32 Lib "Gpib-32.dll" Alias "Trigger" (ByVal ud As Integer, ByVal addr As Integer)
    Declare Sub TriggerList32 Lib "Gpib-32.dll" Alias "TriggerList" (ByVal ud As Integer, ByRef arg1 As Long)

    Declare Sub Sleep Lib "kernel32" (ByVal dwMilliseconds As Integer)

    Sub AllSpoll(ByVal ud As Short, ByRef addrs() As Short, ByRef results() As Short)
        ' Call the 32-bit DLL.
        Call AllSpoll32(ud, addrs(0), results(0))

        Call copy_ibglobals()
    End Sub

    Sub DevClear(ByVal ud As Short, ByVal addr As Short)
        Call DevClear32(ud, addr)
        Call copy_ibglobals()
    End Sub

    Sub DevClearList(ByVal ud As Short, ByRef addrs() As Short)
        Call DevClearList32(ud, addrs(0))
        Call copy_ibglobals()
    End Sub

    Sub EnableLocal(ByVal ud As Short, ByRef addrs() As Short)
        Call EnableLocal32(ud, addrs(0))
        Call copy_ibglobals()
    End Sub

    Sub EnableRemote(ByVal ud As Short, ByRef addrs() As Short)
        Call EnableRemote32(ud, addrs(0))
        Call copy_ibglobals()
    End Sub

    Sub FindLstn(ByVal ud As Short, ByRef addrs() As Short, ByRef results() As Short, ByVal limit As Short)
        Call FindLstn32(ud, addrs(0), results(0), limit)
        Call copy_ibglobals()
    End Sub

    Sub FindRQS(ByVal ud As Short, ByRef addrs() As Short, ByRef result As Short)
        Dim tmpresult As Integer
        Call FindRQS32(ud, addrs(0), tmpresult)
        result = ConvertLongToInt(tmpresult)
        Call copy_ibglobals()
    End Sub

    Sub ibask(ByVal ud As Short, ByVal opt As Short, ByRef rval As Short)
        Dim tmprval As Integer
        Call ibask32(ud, opt, tmprval)
        rval = ConvertLongToInt(tmprval)
    End Sub

    Sub ibbna(ByVal ud As Short, ByVal udname As String)
        Call ibbna32(ud, udname)
        Call copy_ibglobals()
    End Sub

    Sub ibcac(ByVal ud As Short, ByVal v As Short)
        Call ibcac32(ud, v)
        Call copy_ibglobals()
    End Sub

    Sub ibclr(ByVal ud As Short)
        Call ibclr32(ud)
        Call copy_ibglobals()
    End Sub

    Sub ibcmd(ByVal ud As Short, ByVal buf As String)
        Dim cnt As Integer
        cnt = CInt(Len(buf))
        Call ibcmd32(ud, buf, cnt)
        Call copy_ibglobals()
    End Sub

    Sub ibcmda(ByVal ud As Short, ByVal buf As String)
        Dim cnt As Integer
        cnt = CInt(Len(buf))
        Call ibcmd32(ud, buf, cnt)
        Call copy_ibglobals()
    End Sub

    Sub ibconfig(ByVal bdid As Short, ByVal opt As Short, ByVal v As Short)
        Call ibconfig32(bdid, opt, v)
        Call copy_ibglobals()
    End Sub

    Sub ibdev(ByVal bdid As Short, ByVal pad As Short, ByVal sad As Short, ByVal tmo As Short, ByVal eot As Short, ByVal eos As Short, ByRef ud As Short)
        ud = ConvertLongToInt(ibdev32(bdid, pad, sad, tmo, eot, eos))
        Call copy_ibglobals()
    End Sub


    Sub ibdma(ByVal ud As Short, ByVal v As Short)
        Call ibdma32(ud, v)
        Call copy_ibglobals()
    End Sub

    Sub ibeos(ByVal ud As Short, ByVal v As Short)
        Call ibeos32(ud, v)
        Call copy_ibglobals()
    End Sub

    Sub ibeot(ByVal ud As Short, ByVal v As Short)
        Call ibeot32(ud, v)
        Call copy_ibglobals()
    End Sub

    Sub ibfind(ByVal udname As String, ByRef ud As Short)
        ud = ConvertLongToInt(ibfind32(udname))
        Call copy_ibglobals()
    End Sub
